--- a/marketing.html
+++ b/marketing.html
@@ -12,6 +12,8 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/js/all.min.js" crossorigin="anonymous"></script>
         <link href='https://cdn.jsdelivr.net/npm/fullcalendar@5.4.0/main.css' rel='stylesheet' />
         <script src='https://cdn.jsdelivr.net/npm/fullcalendar@5.4.0/main.js'></script>
+        <link href="css/custom-styles.css" rel="stylesheet" />
+
         <script>
     
           document.addEventListener('DOMContentLoaded', function() {
@@ -123,38 +125,54 @@
                         </ol>
                         <div class="row">
                             <div class="col-xl-3 col-md-6">
-                                <div class="card bg-primary text-white mb-4">
-                                    <div class="card-body">Primary Card</div>
-                                    <div class="card-footer d-flex align-items-center justify-content-between">
-                                        <a class="small text-white stretched-link" href="#">View Details</a>
-                                        <div class="small text-white"><i class="fas fa-angle-right"></i></div>
+                                <div class="card mb-4 stats-container">
+                                    <div  class="text-center">
+                                        <i class="fas fa-user-friends stats-icon"></i>
+                                    </div>
+                                    <div>
+                                        <p class="text-center stats-value">128</p>
+                                    </div>
+                                    <div>
+                                        <p class="text-center">Clients</p>
                                     </div>
                                 </div>
                             </div>
                             <div class="col-xl-3 col-md-6">
-                                <div class="card bg-warning text-white mb-4">
-                                    <div class="card-body">Warning Card</div>
-                                    <div class="card-footer d-flex align-items-center justify-content-between">
-                                        <a class="small text-white stretched-link" href="#">View Details</a>
-                                        <div class="small text-white"><i class="fas fa-angle-right"></i></div>
+                                <div class="card mb-4 stats-container">
+                                    <div  class="text-center">
+                                        <i class="fas fa-clipboard-check stats-icon"></i>
+                                    </div>
+                                    <div>
+                                        <p class="text-center stats-value">32</p>
+                                    </div>
+                                    <div>
+                                        <p class="text-center">Completed Tasks</p>
                                     </div>
                                 </div>
                             </div>
                             <div class="col-xl-3 col-md-6">
-                                <div class="card bg-success text-white mb-4">
-                                    <div class="card-body">Success Card</div>
-                                    <div class="card-footer d-flex align-items-center justify-content-between">
-                                        <a class="small text-white stretched-link" href="#">View Details</a>
-                                        <div class="small text-white"><i class="fas fa-angle-right"></i></div>
+                                <div class="card mb-4 stats-container">
+                                    <div  class="text-center">
+                                        <i class="fas fa-bell stats-icon"></i>
+                                    </div>
+                                    <div>
+                                        <p class="text-center stats-value">2</p>
+                                    </div>
+                                    <div>
+                                        <p class="text-center">Notification</p>
                                     </div>
                                 </div>
                             </div>
                             <div class="col-xl-3 col-md-6">
-                                <div class="card bg-danger text-white mb-4">
-                                    <div class="card-body">Danger Card</div>
-                                    <div class="card-footer d-flex align-items-center justify-content-between">
-                                        <a class="small text-white stretched-link" href="#">View Details</a>
-                                        <div class="small text-white"><i class="fas fa-angle-right"></i></div>
+                                <div class="card mb-4 stats-container">
+                                    <div  class="text-center">
+                                        <i class="fas fa-info-circle stats-icon"></i>
+                                    </div>
+                                    <div>
+                                        <p class="text-center stats-value">4</p>
+                                    </div>
+                                    <div>
+                                        <p class="text-center">Reports</p>
                                     </div>
                                 </div>
                             </div>
