add links for sales and operations

--- a/dashboardprojectlead.html
+++ b/dashboardprojectlead.html
@@ -65,6 +65,14 @@
                                 <div class="sb-nav-link-icon"><i class="fas fa-project-diagram"></i></div>
                                 Projects
                             </a>
+                            <a class="nav-link" href="marketing.html">
+                                <div class="sb-nav-link-icon"><i class="fas fa-project-diagram"></i></div>
+                                Sales
+                            </a>
+                            <a class="nav-link" href="operation.html">
+                                <div class="sb-nav-link-icon"><i class="fas fa-project-diagram"></i></div>
+                                Operational Director
+                            </a>
     
                         </div>
 
