--- a/maindashboard.html
+++ b/maindashboard.html
@@ -74,7 +74,7 @@
                                     Project Overview
                                 </a>
                                 <a class="nav-link" href="tasks.html">
-                                    <div class="sb-nav-link-icon"><i class="fas fa-project-diagram"></i></div>
+                                    <div class="sb-nav-link-icon"><i class="fas fa-tasks"></i></div>
                                     Creat Task
                                 </a>
                             </div>
