--- a/operation.html
+++ b/operation.html
@@ -86,7 +86,7 @@
                             Projects
                         </a>
                         <a class="nav-link" href="projectview.html">
-                            <div class="sb-nav-link-icon"><i class="fas fa-project-diagram"></i></div>
+                            <div class="sb-nav-link-icon"><i class="fas fa-tasks"></i></div>
                             Project Overview
                         </a>
                         <a class="nav-link" href="tasks.html">
