--- a/project.html
+++ b/project.html
@@ -262,6 +262,7 @@
                 })
                 .then(function (docRef) {
                     console.log('Document written with ID: ', docRef.id);
+                    window.location.href = '/project.html'
                 })
                 .catch(function (error) {
                     console.error('Error adding document: ', error);
