--- a/maindashboard.html
+++ b/maindashboard.html
@@ -108,7 +108,62 @@
                                   <ol class="breadcrumb mb-4">
                                       <li class="breadcrumb-item active">You are welcome</li>
                                   </ol>
-                                  <div class="row">
+                                  <div class="container">
+                                    <div class="row">
+                                        <div class="col">
+                                            <div class="card" style="width: 18rem;">
+                                                <img src="images/precision-farming-1-1024x576.jpeg" class="card-img-top" alt="..." style="width: 18rem; height: 16rem">
+                                                <div class="card-body">
+                                                <h5 class="text-center">CROP MONITORING</h5>
+                                                </div>
+                                            </div>
+                                            </div>
+                                                <div class="col">
+                                                <div class="card" style="width: 18rem;">
+                                                    <img src="images/IMG_1363-1024x683.jpg" class="card-img-top" alt="..." style="width: 18rem; height: 16rem">
+                                                    <div class="card-body">
+                                                    <h5 class="text-center">CROP SPRAYING </h5>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="col">
+                                                <div class="card" style="width: 18rem;">
+                                                    <img src="images/topo-survey-1024x523.jpg" class="card-img-top" alt="..." style="width: 18rem; height: 16rem">
+                                                    <div class="card-body">
+                                                        <h5 class="text-center">MAPPING & SURVEYING</h5>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                    </div>
+                                    <br>
+                                <div class="row">
+                                        <div class="col">
+                                            <div class="card" style="width: 18rem;">
+                                                <img src="images/commnunity-dev-projects.jpg" class="card-img-top" alt="..." style="width: 18rem; height: 16rem">
+                                                <div class="card-body">
+                                                    <h5 class="text-center">3D MODELING</h5>
+                                                </div>
+                                            </div>
+                                            </div>
+                                                <div class="col">
+                                                <div class="card" style="width: 18rem;">
+                                                    <img src="images/power.jpg" class="card-img-top" alt="..." style="width: 18rem; height: 16rem">
+                                                    <div class="card-body">
+                                                    <h5 class="text-center">ASSET INSPECTION</h3>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="col">
+                                                <div class="card" style="width: 18rem;">
+                                                    <img src="images/atmos-drone-768x432.png" class="card-img-top" alt="..." style="width: 18rem; height: 16rem">
+                                                    <div class="card-body">
+                                                    <h5 class="text-center">DRONE MAINTENANCE</h5>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                    </div>   
+                                </div>
+                                  <!-- <div class="row">
                                       <div class="col">
                                         <div class="card" style="width: 29rem; height: 20rem;">
                                             <img src="./images/precision-farming-1-1024x576.jpeg" class="card-img-top" alt="..." style="width:29rem ; height: 15rem;">
@@ -160,7 +215,7 @@
                                           </div>
                                         </div>
                                     </div>
-                                </div>
+                                </div> -->
         </div>
        
     
@@ -183,7 +238,7 @@
                                             </div>
                                         </div>
                                         <br>
-                                        <div class="row"  style="border-bottom: 1px solid #cccccc; margin-top: 10px;">
+                                        <!-- <div class="row"  style="border-bottom: 1px solid #cccccc; margin-top: 10px;">
                                             <div class="col-md-11">
                                                 <div class="form-check form-check-inline">
                                                     <label class="form-check-label" for="inlineCheckbox1">
@@ -194,7 +249,7 @@
                                             <div class="col-md-1">
                                                 <i class="fas fa-file-pdf"></i>
                                             </div>
-                                        </div>
+                                        </div> -->
                                         <div class="row"  style="border-bottom: 1px solid #cccccc;  margin-top: 10px;">
                                             <div class="col-md-11">
                                                 <div class="form-check form-check-inline">
