--- a/clients.html
+++ b/clients.html
@@ -144,7 +144,7 @@
                                 </div>
                                 <div class="modal-footer">
                                     <button type="submit" class="btn font-weight-bold send-email"
-                                        style="background-color: #72736E;"> Save</button>
+                                        style="background-color: #72736E;" id="touch"> Save</button>
                                 </div>
                             </form>
                         </div>
@@ -187,6 +187,19 @@
     <script src="https://cdn.datatables.net/1.10.20/js/jquery.dataTables.min.js" crossorigin="anonymous"></script>
     <script src="https://cdn.datatables.net/1.10.20/js/dataTables.bootstrap4.min.js" crossorigin="anonymous"></script>
     <script src="assets/demo/datatables-demo.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    
+    <script>
+        var count = 0;
+$("button#touch").on('click', function() {
+  count ++;
+  $(".cee").text(count);
+});
+
+$(".cee").text(count);
+    </script>
+
+</script>
 
     <!-- The core Firebase JS SDK is always required and must be listed first -->
     <script src="https://www.gstatic.com/firebasejs/8.1.1/firebase-app.js"></script>
