--- a/project.html
+++ b/project.html
@@ -274,7 +274,7 @@
                     let newRow = `
                     <tr>
                                     <td><a href="projectview.html?name=${data.projectName}&id=${doc.id}">${data.projectName}</a></td>
-                                    <td><a href="teamprojectview.html">${data.projectTeamlead}</a></td>
+                                    <td>${data.projectTeamlead}</a></td>
                                     <td>${data.projectType}</td>
                                      <td>${data.projectStartdate}</td>
                                     <td>${data.projectDuedate}</td>
