--- a/dashboardprojectlead.html
+++ b/dashboardprojectlead.html
@@ -233,7 +233,7 @@
                     </div>
                     <div class="col">
                         <div class="card shadow mb-4">
-                            <div class="container">
+                            <div class="container" style="border: 4px solid #ccc;  padding: 20px;">
                                 <div class="row">
                                     <div class="col">
                                         <h6>Approvals</h6>
@@ -247,7 +247,7 @@
                                 </div>
                                 <br>
                                 
-                                 <div class="row" style="border-bottom: 1px solid #cccccc; margin-top: 10px;">
+                                <div class="row" style="border-bottom: 1px solid #cccccc; margin-bottom: 10px;">
                                     <div class="col-md-11">
                                         <div class="form-check form-check-inline">
                                             
