--- a/clients.html
+++ b/clients.html
@@ -11,6 +11,7 @@
     <link href="css/styles.css" rel="stylesheet" />
     <link href="css/dataTables.bootstrap4.min.css" rel="stylesheet" crossorigin="anonymous" />
     <script defer src="fontawesome-free-5.15.1-web/js/all.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/3.5.0/css/flag-icon.min.css" integrity="sha512-Cv93isQdFwaKBV+Z4X8kaVBYWHST58Xb/jVOcV9aRsGSArZsgAnFIhMpDoMDcFNoUtday1hdjn0nGp3+KZyyFw==" crossorigin="anonymous" />
 </head>
 
 <body class="sb-nav-fixed">
@@ -29,6 +30,15 @@
                 </div>
             </div>
         </form>
+        <div class="nav-item dropdown" style="float: right; margin-top: 5px;">
+            <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown09" data-toggle="dropdown"
+                aria-haspopup="true" aria-expanded="false"><span class="flag-icon flag-icon-us"> </span>
+                English</a>
+            <div class="dropdown-menu" aria-labelledby="dropdown09">
+                <a class="dropdown-item" href="#fr"><span class="flag-icon flag-icon-fr"> </span> French</a>
+                
+            </div>
+        </div>
         <ul class="navbar-nav ml-auto ml-md-0">
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" id="userDropdown" href="#" role="button" data-toggle="dropdown"
@@ -180,6 +190,18 @@
 
     </div>
     </div>
+    <footer class="py-4 bg-light mt-auto">
+  <div class="container-fluid">
+      <div class="d-flex align-items-center justify-content-between small">
+          <div class="text-muted">Copyright &copy; SKT AeroShutter 2020  <img src="images/logo-300x67.png" width="50px"  alt=""> </div>
+          <div>
+              <a href="#">Privacy Policy</a>
+              &middot;
+              <a href="#">Terms &amp; Conditions</a>
+          </div>
+      </div>
+  </div>
+</footer>
     <script src="js/jquery-3.5.1.slim.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/scripts.js"></script>
