--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/login.css">
     <script defer src="fontawesome-free-5.15.1-web/js/all.js"></script>
+    
     <title>log in </title>
 </head>
 <body>
@@ -26,6 +27,20 @@
           
     </div>
 
+
+</div>
+<footer class="py-4 bg-light mt-auto">
+  <div class="container-fluid">
+      <div class="d-flex align-items-center justify-content-between small">
+          <div class="text-muted">Copyright &copy; SKT AeroShutter 2020  <img src="images/logo-300x67.png" width="50px"  alt=""> </div>
+          <div>
+              <a href="#">Privacy Policy</a>
+              &middot;
+              <a href="#">Terms &amp; Conditions</a>
+          </div>
+      </div>
+  </div>
+</footer>
 
 
     <script src="js/bootstrap.min.js"></script>
