--- a/projectview.html
+++ b/projectview.html
@@ -7,11 +7,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <meta name="description" content="" />
   <meta name="author" content="" />
-  <title>Project Overview- SB Admin</title>
+  <title>Project Overview- SKT Admin</title>
   <link href="css/styles.css" rel="stylesheet" />
   <link href="css/dataTables.bootstrap4.min.css" rel="stylesheet" crossorigin="anonymous" />
-  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   <script defer src="fontawesome-free-5.15.1-web/js/all.js"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/3.5.0/css/flag-icon.min.css" integrity="sha512-Cv93isQdFwaKBV+Z4X8kaVBYWHST58Xb/jVOcV9aRsGSArZsgAnFIhMpDoMDcFNoUtday1hdjn0nGp3+KZyyFw==" crossorigin="anonymous" />
   <script>
         const queryString = window.location.search;
         const urlParams = new URLSearchParams(queryString);
@@ -37,6 +37,15 @@
         </div>
       </div>
     </form>
+    <div class="nav-item dropdown" style="float: right; margin-top: 5px;">
+      <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown09" data-toggle="dropdown"
+          aria-haspopup="true" aria-expanded="false"><span class="flag-icon flag-icon-us"> </span>
+          English</a>
+      <div class="dropdown-menu" aria-labelledby="dropdown09">
+          <a class="dropdown-item" href="#fr"><span class="flag-icon flag-icon-fr"> </span> French</a>
+          
+      </div>
+  </div>
     <ul class="navbar-nav ml-auto ml-md-0">
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" id="userDropdown" href="#" role="button" data-toggle="dropdown"
@@ -445,8 +454,21 @@
 
           </main>
         </div>
-
-
+  </div>
+  <br>
+  <br>
+        <footer class="py-4 bg-light mt-auto">
+          <div class="container-fluid">
+              <div class="d-flex align-items-center justify-content-between small">
+                  <div class="text-muted">Copyright &copy; SKT AeroShutter 2020  <img src="images/logo-300x67.png" width="50px"  alt=""> </div>
+                  <div>
+                      <a href="#">Privacy Policy</a>
+                      &middot;
+                      <a href="#">Terms &amp; Conditions</a>
+                  </div>
+              </div>
+          </div>
+        </footer>
 
 
         <script>
