--- a/project.html
+++ b/project.html
@@ -58,27 +58,6 @@
             <nav class="sb-sidenav accordion sb-sidenav-dark" id="sidenavAccordion">
                 <div class="sb-sidenav-menu">
                     <div class="nav">
-                        
-                        <a class="nav-link" href="maindashboard.html">
-                            <div class="sb-nav-link-icon"><i class="fas fa-users"></i></div>
-                            Team Dashboard
-                        </a>
-                        <a class="nav-link" href="dashboardprojectlead.html">
-                            <div class="sb-nav-link-icon"><i class="fas fa-user"></i></div>
-                            Project Lead
-                        </a>
-                        <a class="nav-link" href="operation.html">
-                            <div class="sb-nav-link-icon"><i class="fas fa-user"></i></div>
-                            Operational Director
-                        </a>
-                        <a class="nav-link" href="marketing.html">
-                            <div class="sb-nav-link-icon"><i class="fas fa-users"></i></div>
-                            Marketing Team
-                        </a>
-                        <a class="nav-link" href="clients.html">
-                            <div class="sb-nav-link-icon"><i class="fas fa-user-friends"></i></div>
-                            Clients
-                        </a>
                         <a class="nav-link" href="project.html">
                             <div class="sb-nav-link-icon"><i class="fas fa-project-diagram"></i></div>
                             Projects
@@ -303,7 +282,7 @@
                                     <td>${data.projectType}</td>
                                      <td>${data.projectStartdate}</td>
                                     <td>${data.projectDuedate}</td>
-                                    <td>&#8373;${data.projectBudget}</td>
+                                    <td>$${data.projectBudget}</td>
                                     <td>
                                         ${data.projectStatus}  
                                     </td>
