--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 </head>
 <body>
     <div class="main">
-        <form class="form-signin">
+        <form class="form-signin" onsubmit="login(event)">
             <img class="mb-4" src="images/logo-300x67.png" alt="">
             <label for="inputEmail" class="sr-only">Email address</label>
-            <input type="email" id="inputEmail" class="form-control" placeholder=" Email address" required autofocus>
+            <input type="email" id="inputEmail" name="email" class="form-control" placeholder=" Email address" required autofocus>
             <label for="inputPassword" class="sr-only">Password</label>
             <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
             <div class="checkbox mb-3">
@@ -22,7 +22,7 @@
                 <input type="checkbox" value="remember-me"> Remember me
               </label>
             </div>
-            <button style="background-color:#A4AA4D;" class="btn btn-lg  btn-block" type="submit"> <a href="maindashboard.html">Sign in</a> </button>
+            <button style="background-color:#A4AA4D;" class="btn btn-lg  btn-block" type="submit">Sign in</button>
           </form>
           
     </div>
@@ -46,5 +46,27 @@
     <script src="js/bootstrap.min.js"></script>
     <script src="js/query.js"></script>
     <script src="js/popper.js"></script>
+    <script>
+      function login(event){
+        event.preventDefault();
+        email = event.target.email.value;
+        if(email.includes('sales')){
+          window.location.href = 'marketing.html';
+          localStorage.setItem('user','sales');
+        }
+        else if(email.includes('member')){
+          window.location.href = 'maindashboard.html';
+          localStorage.setItem('user','member');
+        }
+        else if(email.includes('opera')){
+          window.location.href = 'operation.html';
+          localStorage.setItem('user','operation');
+        }
+        else if(email.includes('lead')){
+          window.location.href = 'dashboardprojectlead.html';
+          localStorage.setItem('user','lead');
+        }
+      }
+    </script>
 </body>
 </html>
