--- a/maindashboard.html
+++ b/maindashboard.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="utf-8" />
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Maindashboard- SB Admin</title>
+        <title>Maindashboard- SKT Admin</title>
         <link href="css/styles.css" rel="stylesheet" />
         <link rel="stylesheet" href="css/custom-styles.css">
         <link href="css/dataTables.bootstrap4.min.css" rel="stylesheet" crossorigin="anonymous" />
