--- a/marketing.html
+++ b/marketing.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <title>Sales - SB Admin</title>
+    <title>Sales - SKT Admin</title>
     <link href="css/styles.css" rel="stylesheet" />
     <link href="css/dataTables.bootstrap4.min.css" rel="stylesheet"
         crossorigin="anonymous" />  
@@ -149,7 +149,7 @@
                         <div class="col-xl-4">
                             <div class="row">
                                 <div style="width: 100%; background-color: white;">
-                                    <!-- <div id="calendar"></div> -->
+                                    
                                     <div class="card-header">
                                         <i class="fas fa-chart-area mr-1"></i>
                                         Sales Analytics
@@ -368,7 +368,7 @@
                                      <td>#${data.invoiceNumber}</td>
                                      <td>${data.orderName}</td>
                                      <td>${data.orderType}</td>
-                                      <td>${data.orderAmount}</td>
+                                      <td>$${data.orderAmount}</td>
                                      <td>${data.orderDate}</td>
                                      <td>${data.orderStatus}</td>
                                      <td ">
