--- a/dashboardprojectlead.html
+++ b/dashboardprojectlead.html
@@ -311,8 +311,8 @@
                                         <div class="col">
                                             <a href="">
                                                 
-                                                <p class="text-right"><a href="tasks.html" class="d-none d-sm-inline-block btn btn-sm font-weight-bold shadow-sm" style="background-color:#72736E"><i
-                                                    class="fas fa-plus-circle fa-sm text-white-50"></i>  Create Tasks</a></p>
+                                                <p class="text-right"><a href="project.html" class="d-none d-sm-inline-block btn btn-sm font-weight-bold shadow-sm" style="background-color:#72736E"><i
+                                                    class="fas fa-plus-circle fa-sm text-white-50"></i>  Create Projects</a></p>
                                             </a>
                                         </div>
                                     </div>
