--- a/dashboardprojectlead.html
+++ b/dashboardprojectlead.html
@@ -233,7 +233,7 @@
                                         <small><span class="text-muted">Group </span><b>Support</b></small>
                                     </div>
                                     <div class="col">
-                                        <a href="">
+                                        <a href="tasks.html">
                                             <p class="text-right">View details</p>
                                         </a>
                                     </div>
