--- a/operation.html
+++ b/operation.html
@@ -178,7 +178,7 @@
                                 <div class="row no-gutters align-items-center">
                                     <div class="col mr-2">
                                         <div class="text-xs font-weight-bold text-dark text-uppercase mb-1">
-                                            Onhold<a href="project.html"> Completed </a></div>
+                                          <a href="project.html"> On Hold </a></div>
                                         <div class="h5 mb-0 font-weight-bold text-gray-800">18</div>
                                     </div>
                                     <div class="col-auto">
@@ -238,7 +238,7 @@
                                         <small><span class="text-muted">Group </span><b>Support</b></small>
                                     </div>
                                     <div class="col">
-                                        <a href="">
+                                        <a href="tasks.html">
                                             <p class="text-right">View details</p>
                                         </a>
                                     </div>
