--- a/projectview.html
+++ b/projectview.html
@@ -195,7 +195,7 @@
 
                 <a href="#" class="  d-sm-inline-block text-center py-2 px-2 mt-3 rounded text-white add-dependencies"
                   data-toggle="modal" data-target="#adddependencies" style="float: right;background-color: #72736E;">
-                  <i class="fas fa-plus-circle align-middle text-white"></i> <span>Set Timeline</span>
+                  <i class="fas fa-plus-circle align-middle text-white"></i> <span>Timeline</span>
                 </a>
               </div>
 
@@ -206,7 +206,7 @@
                   <div class="modal-content">
                     <div class="modal-header" style="background-color: #72736E;">
                       <h5 class="modal-title">
-                        <i class="fas fa-plus-circle"></i> Add Timeline
+                        Timeline
                       </h5>
                       <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <i class="fas fa-times"></i>
@@ -248,7 +248,7 @@
                       </div>
                       <div>
                         <button type="submit" id="submit-button" class="btn font-weight-bold send-email"
-                          style="background-color: #72736E;float: right;" id="touch"> Set Timeine</button>
+                          style="background-color: #72736E;float: right;" id="touch"> Set Timeline</button>
                       </div>
                     </form>
 
@@ -378,15 +378,15 @@
                     <li class="list-group-item">
 
                       <div class="custom-control custom-checkbox">
-                        <input type="checkbox" class="custom-control-input" id="check2">
-                        <label class="custom-control-label" for="check2">NOTAMS Checked </label>
+                        <input type="checkbox" class="custom-control-input" id="check5">
+                        <label class="custom-control-label" for="check5">NOTAMS Checked </label>
                       </div>
                     </li>
                     <li class="list-group-item">
 
                       <div class="custom-control custom-checkbox">
-                        <input type="checkbox" class="custom-control-input" id="check5 " checked>
-                        <label class="custom-control-label" for="check5">Drone Kit <re-package></re-package> </label>
+                        <input type="checkbox" class="custom-control-input" id="check6 " checked>
+                        <label class="custom-control-label" for="check6">Drone Kit <re-package></re-package> </label>
                       </div>
                     </li>
 
